--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5/xlsx.mjs"
+    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5/xlsx.mjs",
+    "firebase/app": "https://esm.sh/firebase@11.0.2/app",
+    "firebase/firestore": "https://esm.sh/firebase@11.0.2/firestore",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
