--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="it">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>Gestione Aziendale Integrata</title>
+    
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- PWA / Kiosk Mode Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Alea Gestionale">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#0f172a">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f1f5f9;
+        -webkit-tap-highlight-color: transparent;
+      }
+      /* Prevent pull-to-refresh on mobile which looks bad in kiosk mode */
+      body {
+        overscroll-behavior-y: none;
       }
       @media print {
           @page { margin: 1cm; size: landscape; }
