--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gestione Aziendale Integrata</title>
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <!-- PWA / Kiosk Mode Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
