--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
   <head>
@@ -23,38 +22,41 @@
         font-family: 'Inter', sans-serif;
         background-color: #f1f5f9;
         -webkit-tap-highlight-color: transparent;
+      }
+      /* Prevent pull-to-refresh on mobile which looks bad in kiosk mode */
+      body {
         overscroll-behavior-y: none;
       }
       @media print {
           @page { margin: 1cm; size: landscape; }
           body { background-color: white; -webkit-print-color-adjust: exact; }
           nav, button, .no-print, input, select { display: none !important; }
+          /* Hide all tabs content by default when printing, unless specific class */
+          body > div > div > main > div > div > div { display: none; }
+          
+          /* Only show the report section */
           .print-section { display: block !important; width: 100% !important; margin: 0 !important; padding: 0 !important; border: none !important; box-shadow: none !important; }
-      }
-      /* Prevenzione selezione testo per totem */
-      .no-select {
-        -webkit-user-select: none;
-        user-select: none;
+          .print-section * { display: block; visibility: visible; }
+          .print-section .grid { display: grid !important; }
+          .print-section .hidden.print\:block { display: block !important; }
+          .print-section .print\:hidden { display: none !important; }
       }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@0.2.1",
-    "recharts": "https://esm.sh/recharts@2.15.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.471.0",
-    "xlsx": "https://esm.sh/xlsx@0.18.5",
-    "firebase/app": "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js",
-    "capacitor-nfc": "https://esm.sh/capacitor-nfc@0.1.5",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5/xlsx.mjs",
+    "firebase/app": "https://esm.sh/firebase@11.0.2/app",
+    "firebase/firestore": "https://esm.sh/firebase@11.0.2/firestore",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -62,7 +64,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
